--- a/index.html
+++ b/index.html
@@ -22,14 +22,8 @@
 
 
     <main>
-      <img id="imagenMain" src="https://previews.123rf.com/images/andreanita/andreanita1412/andreanita141200001/34919606-oso-polar-ursus-maritimus-cachorro-saliendo-den-y-jugar-parque-nacional-de-wapusk-canad%C3%A1.jpg" alt="Imagen Main">
-    </main>
-
-
-    <footer>
-      <p>EL OSO POLAR ESTABA VOLANDO POR LOS CIELOS CUANDO MIRO ASI POR DEBAJO DEL HOMBRO UN HELICOPERO CON CANTINFLAS DENTRO. FIN</p>
-    </footer>
-
+      <img id="imagenMain" src 
+      <p>EL OSO POLAR ESTABA VOLANDO POR LOS
 
 
     <script src="index.js"></script>
